<resources>
    <string name="app_name">Sign up and Login_Layout</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="please_enter_your_email">Please, enter your email address. You will receive a link to create a new password via email</string>
    <string name="send">Send</string>
    <string name="haved_account">Already have an account</string>
    <string name = "error_name">Please enter your name</string>
    <string name = "error_email">Not a valid email address</string>
    <string name = "error_password"> Password do not match</string>
    <string name="error_forgot">Not a valid email address.Should be your@email.com</string>
</resources>