<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">
    <androidx.appcompat.widget.Toolbar
        app:title=""
        android:id="@+id/toolbarForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/nanum_gothic"
        android:text="@string/forgot_password"
        android:textColor="#252D32"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarForgotPassword" />


    <TextView
        android:fontFamily="@font/nanum_gothic"
        android:padding="2dp"
        android:id="@+id/txtInstruction"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/please_enter_your_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:padding="5dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/edtsignup"
        android:enabled="true"
        android:id="@+id/tilEmailForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/txtForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="110dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:errorEnabled="true"
        android:textColorHint="@color/hint_color"
        app:helperTextTextColor="@color/hint_color"
        android:hint="@string/email"
        app:hintTextColor="@color/hint_color"
        >

        <EditText
            android:id="@+id/etEmailForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtErrorEmailForgot"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="50dp"
        android:textColor="#F44336"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmailForgotPassword" />
    <ImageView
        android:contentDescription="@null"
        android:id="@+id/imageViewEmailForgot"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilEmailForgotPassword"
        app:layout_constraintEnd_toEndOf="@+id/tilEmailForgotPassword"
        app:layout_constraintTop_toTopOf="@+id/tilEmailForgotPassword"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSend"
        app:cardBackgroundColor="#1B1B1C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tilEmailForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="40dp"
        >

        <Button
            android:id="@+id/btnSend"
            android:layout_width="367dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>