<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        app:title=""
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/nanum_gothic"
        android:text="@string/sign_up"
        android:textColor="#252D32"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:padding="5dp"
        android:paddingTop="4dp"
        android:paddingBottom="1dp"
        android:background="@drawable/edtsignup"
        android:enabled="true"
        android:id="@+id/txtInPutLayOutName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/txtSignUp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="110dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/name"
        android:textColorHint="@color/hint_color"
        app:helperTextTextColor="@color/hint_color"
        app:errorEnabled="true"
        app:hintTextColor="@color/hint_color">

        <EditText
            android:contentDescription="@null"
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtErrorname"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="35dp"
        android:textColor="#F44336"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInPutLayOutName" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/imageViewname"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtInPutLayOutName"
        app:layout_constraintEnd_toEndOf="@+id/txtInPutLayOutName"
        app:layout_constraintTop_toTopOf="@+id/txtInPutLayOutName" />

    <com.google.android.material.textfield.TextInputLayout
        android:padding="5dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edtsignup"
        android:enabled="true"
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/txtInPutLayOutName"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="110dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:errorEnabled="false"
        app:endIconMode="custom"
        android:hint="@string/email"
        android:textColorHint="@color/hint_color"
        app:helperTextTextColor="@color/hint_color"
        app:hintTextColor="@color/hint_color">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtErrorEmail"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="35dp"
        android:textColor="@color/error_text"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/imageViewEmail"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilEmail"
        app:layout_constraintEnd_toEndOf="@+id/tilEmail"
        app:layout_constraintTop_toTopOf="@+id/tilEmail"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:padding="5dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edtsignup"
        android:enabled="true"
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="110dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:errorEnabled="true"
        android:textColorHint="@color/hint_color"
        app:helperTextTextColor="@color/hint_color"
        android:hint="@string/password"
        app:hintTextColor="@color/hint_color"
        >

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtErrorPassword"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="35dp"
        android:textColor="#F44336"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
    <ImageView
        android:contentDescription="@null"
        android:id="@+id/imageViewPassword"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="@+id/tilPassword"
        app:layout_constraintTop_toTopOf="@+id/tilPassword"
        />
    <TextView
        android:id="@+id/haveAccount"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/haved_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="@+id/right_arrow"/>
    <ImageView
        android:contentDescription="@null"
        android:layout_marginEnd="20dp"
        android:id="@+id/right_arrow"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_right_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/haveAccount"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSignUp"
        app:cardBackgroundColor="#1B1B1C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="40dp">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="367dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtOtherSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:text="@string/or_login_with_social_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:contentDescription="@null"
        android:id="@+id/signupFb"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/other_sign_up"
        android:src="@drawable/ic_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toEndOf="@id/SignUpGg" />

    <ImageButton
        android:contentDescription="@null"
        android:id="@+id/SignUpGg"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/other_sign_up"
        android:src="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>